# gemini-balance

./: .bumpversion.toml  .dockerignore  .env.example  .gitignore  .project_memory.json  .rules  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  record.md  todo_list.md
.clinerules/: coding-standards.md  config-env-sync.md  daisyui.md  debugging-workflow.md  flake8-lint-waiver.md  svelte.md  (+2 more)
backend/: Dockerfile  main.py  pyproject.toml
backend/app/: dependencies.py  main.py
backend/app/api/api/endpoints/: auth.py  auth_keys.py  keys.py  logs.py  request_keys.py  request_logs.py  status.py
backend/app/api/api/schemas/: auth_keys.py  request_keys.py  request_logs.py
backend/app/api/management/endpoints/: auth.py  auth_keys.py  keys.py  logs.py  request_logs.py  status.py
backend/app/api/openai/endpoints/: chat.py
backend/app/api/openai/schemas/: chat.py
backend/app/api/v1/endpoints/: chat.py
backend/app/api/v1/schemas/: chat.py
backend/app/api/v1beta/endpoints/: auth.py  auth_keys.py  gemini.py  keys.py  status.py
backend/app/api/v1beta/schemas/: auth.py  gemini.py  keys.py
backend/app/core/: concurrency.py  config.py  decorators.py  errors.py  logging.py  security.py
backend/app/db/: __init__.py  base_migration_manager.py  redis_migration_manager.py  sqlite_migration_manager.py
backend/app/db/migrations/: __init__.py
backend/app/db/migrations/sql_versions/: __init__.py  v10_add_indexes_to_request_logs.py  v1_create_key_states_table.py  v4_create_request_logs_table.py  v5_remove_usage_today_from_key_states.py  v6_update_table_constraints.py  v7_add_token_counts_to_request_logs.py  v8_add_error_type_to_request_logs.py  v9_add_key_brief_to_request_logs.py
backend/app/db/migrations/versions/: __init__.py  v2_create_auth_keys_table.py  v3_remove_last_usage_date_from_key_states.py
backend/app/services/: __init__.py  auth_service.py  base_service.py  gemini_service.py  key_manager.py  openai_service.py  redis_key_manager.py  sqlite_key_manager.py
backend/app/services/auth_key_manager/: __init__.py  auth_service.py  db_manager.py  redis_manager.py  schemas.py  sqlite_manager.py
backend/app/services/chat_service/: __init__.py  base_service.py  chat_service.py  gemini_service.py  openai_service.py  types.py
backend/app/services/key_managers/: __init__.py  background_tasks.py  db_manager.py  key_state_manager.py  redis_manager.py  sqlite_manager.py
backend/app/services/request_key_manager/: background_tasks.py  db_manager.py  key_state_manager.py  schemas.py  sqlite_manager.py
backend/app/services/request_logs/: __init__.py  db_manager.py  redis_manager.py  request_log_manager.py  schemas.py  sqlite_manager.py
backend/app/services/request_service/: base_request_service.py  gemini_request_service.py  openai_request_service.py
backend/tests/: test_concurrency.py  test_gemini.py  test_key_manager.py  test_redis_key_manager.py
(+132 files in other folders)
